--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/MemoryGame.js" type="text/javascript"></script>
     <script src="js/Card.js" type="text/javascript"></script>
+        <script src="https://code.createjs.com/1.0.0/soundjs.min.js"></script>
     <link href="css/MemoryGame.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
